tests/snapshots/run_wpt_conformance__litert_lesserOrEqual_float32_2D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "lesser_or_equal.https.any.js",
    "lesserOrEqual float32 2D tensors",
    "litert",
    "PASS",
)
