tests/snapshots/run_wpt_conformance__litert_lesserOrEqual_float32_broadcast_3D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "lesser_or_equal.https.any.js",
    "lesserOrEqual float32 broadcast 3D to 4D",
    "litert",
    "PASS",
)
