tests/snapshots/run_wpt_conformance__litert_lesser_float16_1D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "lesser.https.any.js",
    "lesser float16 1D tensors",
    "litert",
    "PASS",
)
